welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:5: error: java.awt.Color does not take parameters
couleur = Color.green()
                     ^